--- a/package.json
+++ b/package.json
@@ -1,19 +1,49 @@
 {
-  "name": "jon",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "jongroundzero",
+  "version": "1.1.0",
+  "description": "jon CLI",
+  "license": "MIT",
+  "repository": "jon20/jon",
+  "author": "jon <jongroundz@gmail.com>",
+  "bin": "src/cli.js",
+  "engines": {
+    "node": ">=8"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "add-contributor": "all-contributors add",
+    "precommit": "lint-staged",
+    "fmt": "prettier --write '**/*.{js,json,md}'",
+    "lint": "eslint src"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jon20/jon.git"
+  "lint-staged": {
+    "*.{js,json,md}": [
+      "prettier --write",
+      "git add"
+    ]
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jon20/jon/issues"
+  "files": [
+    "src"
+  ],
+  "keywords": [
+    "cli-app",
+    "cli",
+    "me"
+  ],
+  "dependencies": {
+    "import-jsx": "^1.3.0",
+    "ink": "^0.4.1",
+    "ink-select-input": "^1.1.0",
+    "meow": "^5.0.0",
+    "opn": "^5.3.0",
+    "term-img": "^2.1.0",
+    "terminal-image": "^0.1.1"
   },
-  "homepage": "https://github.com/jon20/jon#readme"
+  "devDependencies": {
+    "all-contributors-cli": "^4.11.1",
+    "eslint": "^4.19.1",
+    "eslint-config-precure": "^2.7.0",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.1.0",
+    "prettier": "^1.12.1"
+  }
 }
